@@ -1,6 +1,9 @@
  (Format: Year/Month/Day)
 Changes for 1.0rc3:
 *07/01/21:
+   * Allow transparency in window buttons, so they show the titlebar underneath
+     instead of black (Mark)
+     WinButton.cc/hh FbWinFrame.cc
    * Little fix for closing tabs with non-default gravity (Mark)
      Window.cc
    * Several fixes for menu behavior (Mark)
